image-container touchstart preventDefault + fix align

--- a/src/sass/_lightbox.scss
+++ b/src/sass/_lightbox.scss
@@ -27,9 +27,10 @@
     // text-align: center;
 
     img {
-        // @include transition-property(opacity);
-        // @include transition-duration(0.3s);
-        @include box-shadow(0 0 15px 5px black);
+        @include transition-property(opacity);
+        @include transition-duration(0.3s);
+        // @include box-shadow(0 0 15px 5px black);
+        // @include scale(0.8);
         -moz-user-select: none;
         -khtml-user-select: none;
         -webkit-user-select: none;
@@ -54,6 +55,7 @@
 
         &.current {
             opacity: 1;
+            @include scale(0.8);
         }
 
         &.stage1 {
